# Symex_upstream

./: AUTHORS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
cargo-symex/: Cargo.toml
cargo-symex/src/: args.rs  build.rs  main.rs
crates/rtic-easy/: Cargo.toml
crates/rtic-easy/example/: Cargo.toml
crates/rtic-easy/example/src/: main.rs
crates/rtic-easy/src/: lib.rs
crates/symex_lib/: 3  Cargo.toml
symex/: Cargo.toml  build.rs  log.rs
symex/.cargo/: config.toml
symex/general_assembly/src/: condition.rs  lib.rs  operand.rs  operation.rs
symex/general_assembly/src/extension/: ieee754.rs
symex/src/: arch.rs  lib.rs  logging.rs  mod.rs  path_selection.rs  project.rs  util.rs
symex/src/arch/: arm.rs  discover.rs
symex/src/arch/arm/: v6.rs  v7.rs
symex/src/arch/arm/v6/: decoder.rs  timing.rs
symex/src/arch/arm/v7/: compare.rs  decoder.rs  test.rs  test_bitwuzla.rs  timing.rs
symex/src/arch/arm/v7/decoder/: branch.rs  fp.rs  memory_access.rs  sarithmetic.rs  ssimd.rs  test.rs  uarithmetic.rs  usimd.rs
symex/src/arch/risc_v/: decoder.rs  decoder_implementations.rs  mod.rs  test.rs  timing.rs
symex/src/defaults/: bitwuzla.rs  boolector.rs  logger.rs  mod.rs
symex/src/executor/: hooks.rs  instruction.rs  mod.rs  state.rs  util.rs  vm.rs
symex/src/executor/extension/: ieee754.rs
symex/src/initiation/: mod.rs  run_config.rs
symex/src/manager/: mod.rs
symex/src/memory/: array_memory.rs  mod.rs
symex/src/project/: dwarf_helper.rs  segments.rs
symex/src/smt/: mod.rs
symex/src/smt/bitwuzla/: expr.rs  fpexpr.rs  memory.rs  mod.rs
symex/src/smt/smt_boolector/: expr.rs  memory.rs  mod.rs  solver.rs
symex/transpiler/language/src/: ast.rs  ga_backend.rs  lib.rs  parser.rs
symex/transpiler/language/src/ast/: function.rs  operand.rs  operations.rs
symex/transpiler/language/src/ga_backend/: function.rs  operand.rs  operations.rs
symex/transpiler/language/src/parser/: function.rs  operand.rs  operation.rs
symex/transpiler/language/src/type_checker/: mod.rs
symex/transpiler/src/: lib.rs
