[workspace]
resolver = "2"
members = [
    "cargo-symex",
    "crates/llvm-ir",
    "crates/symex_lib",
    "crates/valid_derive",
    "crates/rtic-easy",
    "crates/rtic-easy/example",
    # "armv6-m-examples", # <- has its own profiles, so not proper member
    "symex",
]

[profile.release]
debug = true
lto = true

[patch.crates-io]
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic" }
