[package]
name = "symex"
version = "0.2.0"
edition = "2021"

[dependencies]
# Error handling and interface
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Internal language.
transpiler = { path = "../symex/transpiler" }
general_assembly = { path = "../symex/general_assembly" }

# SMT-backends.
boolector = { version  = "0.4.3", optional = true }
bitwuzla = { git = "https://github.com/ivajon/boolector-rs.git", branch = "bitwuzla", optional = true }
z3-sys = { version = "0.8.1", optional = true }


# Parsing-backends.
armv6-m-instruction-parser = "0.3.0-rc1"
disarmv7 = { git = "https://github.com/ivajon/disarmv7" }
risc-v-disassembler = "0.0.1"

## Binary parsing
gimli = "0.31.1"
object = "0.36.0"
rust-debug = {version = "0.1.0", git = "https://github.com/ivajon/rust-debug"}

## String parsing
regex = "1.10.2"
serde = { version = "1.0.219", features = ["derive"], optional = true }

# External dependencies
hashbrown = "0.15.2"
colored = "2.0"

# Code generation
paste = "1.0.14"

[features]
# Solvers
bitwuzla = ["dep:bitwuzla"]
## Deprecated since 0.2.0 as it does not support lambdas.
boolector = ["dep:boolector","deprecated"]
z3 = ["incomplete", "dep:z3-sys"]

# Denotes that a feature is experimental.
experimental = []

incomplete = []

# Denotes that the user is using deprecated features.
deprecated = []

bitwuzla-exact-fp = ["experimental"]

exact = ["bitwuzla-exact-fp"]

default = ["bitwuzla","exact","log"]

log = []

serde = ["dep:serde"]
